# entangler

./: .gitignore  Cargo.toml  README.md
src/: certificate.rs  client.rs  file_cache.rs  file_scraper.rs  file_sync.rs  folder_send.rs  main.rs  path_id_cache.rs  scraper.rs  server.rs
src/index/: block.rs  block_info.rs  builder.rs  entry.rs  file_info.rs  folder.rs  folder_index.rs  folder_index_builder.rs  mod.rs
src/messages/: block_info.rs  file_info.rs  hello.rs  mod.rs  watcher.rs
src/messages/decoders/: block_info.rs  file_info.rs  folder_index.rs  hello.rs  message_type.rs  mod.rs  string.rs
src/messages/encoder/: block_info.rs  file_info.rs  folder_index.rs  hello.rs  mod.rs  string.rs
