[package]
name = "entangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
fast_rsync = "0.1.4"
futures = "0.3.25"
quinn = "0.9.3"
rcgen = "0.10.0"
rustls = { version = "0.20.7", features = ["quic"] }
rustls-pemfile = "1.0.1"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
