[package]
name = "entangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
crc32fast = "1.3.2"
futures = "0.3.25"
md-5 = "0.10.5"
notify = { version = "5.0.0", default-features = false, features = ["fsevent-sys", "macos_fsevent"] }
pathdiff = "0.2.1"
quinn = "0.9.3"
rayon = "1.6.1"
rcgen = "0.10.0"
rolling-dual-crc = "0.1.0"
rustls = { version = "0.20.7", features = ["quic"] }
rustls-pemfile = "1.0.1"
sha3 = "0.10.6"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
walkdir = "2.3.2"
